# naujac

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  build.bat  build.sh  txt
_codeql_build_dir/: Makefile
examples/: ExamplePayload.cpp
include/: NetworkStream.h  PEMapper.h  PanicFunction.h  ThreadHijacker.h
src/: NetworkStream.cpp  PEMapper.cpp  PanicFunction.cpp  ThreadHijacker.cpp  main.cpp
